--- a/vista/css/style.css
+++ b/vista/css/style.css
@@ -1,22 +1,42 @@
 .botones input{
-    background-color: rgb(50, 50, 50);
-    border-radius: 5px;
-    color: aliceblue;
+    background-color: rgb(206, 206, 206);
+    border-radius: 3px;
+    color: #0e1734;
     border: none;
-    margin: 1px;
+    padding: 10px;
+    margin: 2px;
+    margin-top: 5px;
     margin-bottom: 4px;
+    margin-left: 6px;
     width: 50px;
     height: 50px;
-    font-size: 30px;
-    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
+    font-size: 20px;    
+    transition: background-color 0.3s, color 0.3s;
+    cursor: pointer;
     
-    
+}
+.botones{
+    background-color: #0e1734;
+    width: 250px;
+    height: 300px;
+    border-radius: 3px;
+}
+
+#reset {
+    width: 106px;
+    margin-left: 12px;
+}
+
+#equal {
+    width: 106px;
+    background-color: #3893f4;
 }
 
 .num1{
     transition: background-color 0.3s, color 0.3s;
     cursor: pointer;
 }
+
 
 .num1:hover{
     background-color:  rgb(18, 18, 18); /* Color de fondo cuando el mouse está sobre el botón */
@@ -144,6 +164,7 @@
 .numReset{
     transition: background-color 0.3s, color 0.3s;
     cursor: pointer;
+
 }
 
 .numReset:hover{
@@ -182,45 +203,34 @@
 }
 
 #pantalla{
-    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
-    border-radius: 5px;
-    width: 220px;
-    height: 50px;
+    text-align: right;
+    border-radius: 3px;
+    width: 250px;
+    height: 60px;
     border: none;
     margin-bottom: 10px;
-    background-color:   rgb(50, 50, 50);
-    font-size: 30px;
+    background-color:   #0e1734;
+    font-size: 20px;
     color: rgb(255, 255, 255);
 }
 
-#calc{
-    border-radius: 10px;
-    background-color:rgb(32, 95, 205);
+#calc {
+    border-radius: 5px;
     width: 262px;
-    height: 320px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.3);
+
+    position: static; /* Ya no necesita absolute */
 }
 
 #calc form{
-    margin-top: 20px;
-    margin: 20px;
+    margin: 10px;
 }
 
-:root {
-    --bs-gradient: linear-gradient(180deg, #16369f, #5f5482); /* Gradient oscuro */
-}
-
-.elemento{
-    /* Utiliza la variable --bs-gradient para el fondo de gradiente */
-    background-image: var(--bs-gradient);
-    /* Otros estilos de tu elemento */
+.elemento {
+    background-color: #172552;
     width: 100%;
     height: 92.7vh;
-    /* Puedes agregar más propiedades de estilo según tus necesidades */
+    display: flex;           /* Habilita flexbox */
+    justify-content: center; /* Centra horizontal */
+    align-items: center;     /* Centra vertical */
 }
-
 
